<resources>
    <string name="app_name">EurexCommunicatorDB</string>
    <string name="title_activity_ticker_main">Eurex Indices</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_index_ticker">Eurex Indices</string>
    <string name="hint_favorite">Add to favourites</string>
    <string name="futures">Futures</string>
    <string name="options">Options</string>
    <string name="logon_eurex">Logon Eurex</string>
    <string name="logon_xetra">Logon Xetra</string>
    <string name="logon_eurex_clearing">Logon Eurex Clearing</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="indices">Ind</string>
    <string name="news_headline">News</string>
    <string name="circulars">Circulars</string>
    <string name="mailings">Mailings</string>
    <string name="surweys">Surveys</string>
    <string name="contact_your_tkan">Contact your TKAM</string>
    <string name="invoices">Invoices</string>
    <string name="show_report_states">Pending Reports</string>
    <string name="notify_customer">Notify Customer</string>

    <string-array name="menu_indices">
        <item>Eurex Indizes</item>
        <item>Futures</item>
        <item>Optionen</item>
    </string-array>
    <string name="title_activity_circulars">CircularsActivity</string>
    <string name="mailing_headline">Mailings</string>
    <string name="events">Events</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="ort">Ort:</string>
    <string name="datum">Datum:</string>
    <string name="surveys">Surveys</string>
    <string name="invoice">Invoices</string>
    <string name="knowledge">Knowledge Base</string>
    <string name="faq">FAQ</string>
    <string name="dictionary">Dictionary</string>
    <string name="game">Game</string>
    <string name="incident">Incident state</string>
    <string name="margin">Trading Tools</string>
    <string name="calculator">Trading Tools</string>
    <string name="fee">Fee</string>
    <string name="call">Phone Call</string>
    <string name="chat">Online Chat</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menunews">News</string>
    <string name="welcome_no_user">Welcome!</string>
    <string name="action_sign_in_eurex">Sign in Eurex</string>
    <string name="action_sign_in_eurex_clearing">Sign in Eurex Clearing</string>
    <string name="action_sign_in_xetra">Sign in Xetra</string>
    <string name="welcome_user">Welcome to Deutsche Börse Group\'s Client Portal</string>
    <string name="notification">Notifications</string>
    <string name="orderbook">Own Trades</string>
    <string name="orderdetail">Detail</string>
    <string name="emergency">Emergency Action</string>
    <string name="press">Press Releases</string>
    <string name="report">Reports</string>
    <string name="forms">Forms</string>
    <string name="contact_tkam">Contact TKAM</string>
    <string name="ticket">Ticket Tracker</string>
    <string name="rules">Rules and Regulations</string>
    <string name="education">Education</string>
    <string name="privatearea">Member Lounge</string>
</resources>
