<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="byteinspace.net.eurexcommunicatordb.IndexTickerActivity">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
-->

    <item
        android:id="@+id/kurse"
        android:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"
        android:title="@string/indices"
        />

    <group android:id="@+id/indicesgroup">
    <item
        android:id="@+id/action_index_eurex"
        android:title="@string/title_activity_index_ticker"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_index_futures"
        android:title="@string/futures"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_index_options"
        android:title="@string/options"
        app:showAsAction="never"/>

    </group>

    <group android:id="@+id/logongroup">
        <item
            android:id="@+id/action_logon_eurex"
            android:title="@string/logon_eurex"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_logon_xetra"
            android:title="@string/logon_xetra"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_logon_eurex_clearing"
            android:title="@string/logon_eurex_clearing"
            app:showAsAction="never"/>
    </group>
</menu>
