<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/news"
        android:icon="@drawable/newspaper"
        android:title="News">
    </item>

     <item
            android:id="@+id/mainindices"
            android:title="@string/title_activity_ticker_main"
         android:icon="@drawable/chart"
            />
        <item
            android:id="@+id/futures"
            android:title="@string/futures"
            android:icon="@drawable/chart"
            />
        <item
            android:id="@+id/options"
            android:title="@string/options"
            android:icon="@drawable/chart"
            />


    <item
        android:id="@+id/logon"
        android:icon="@drawable/key"
        android:title="Member Logon">
        <menu>
            <item
                android:id="@+id/eurexlogon"
                android:title="@string/logon_eurex"
                />
            <item
                android:id="@+id/eurexclearinglogon"
                android:title="@string/logon_eurex_clearing"
                />
            <item
                android:id="@+id/xetralogon"
                android:title="@string/logon_xetra"
                />

        </menu>
    </item>

</menu>