<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
         android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.v7.widget.Toolbar
            style="@style/EurexCommunicatorToolbarStyle"
            app:popupTheme="@style/EurexCommunicatorToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:elevation="4dp"

            >
        </android.support.v7.widget.Toolbar>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_below="@id/toolbar"
    tools:context="byteinspace.net.eurexcommunicatordb.LoginActivity"
    style="@style/EurexCommunicatorMainView"
    android:padding="16dp"
    >


            <EditText android:id="@+id/logon_user"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/colorPrimary"
                android:background="@color/textview_background"
               android:hint="@string/username"
                />

            <EditText android:id="@+id/logon_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/colorPrimary"
                android:background="@color/textview_background"
                android:hint="@string/prompt_password"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/EurexCommunicatorButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_eurex"
               />

    <Button
        android:id="@+id/email_sign_in_button_eurex_clearing"
        style="@style/EurexCommunicatorButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_eurex_clearing"

        />

    <Button
        android:id="@+id/email_sign_in_button_xetra"
        style="@style/EurexCommunicatorButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_xetra"
       />
        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/navList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        style="@style/EurexCommunicatorDrawerStyle"

        />
</android.support.v4.widget.DrawerLayout>