<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="byteinspace.net.eurexcommunicatordb.EventRegisterActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_event_register"
        android:elevation="4dp"
        android:background="@color/colorPrimary"

        >

    </android.support.v7.widget.Toolbar>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:layout_below="@+id/toolbar_event_register">

        <TableRow>
            <TextView android:id="@+id/evr_name"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeadline"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                android:layout_span="2"
                />
        </TableRow>

        <TableRow>
            <TextView android:id="@+id/evr_ort_head"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDate"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                android:text="@string/ort"
                />
            <TextView android:id="@+id/evr_ort"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDate"
                android:layout_toRightOf="@id/evr_ort_head"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow>
            <TextView android:id="@+id/evr_datum_head"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDate"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                android:text="@string/datum"
                />
            <TextView android:id="@+id/evr_datum"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDate"
                android:layout_toRightOf="@id/evr_datum_head"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                />
        </TableRow>


        <TableRow>
            <TextView android:id="@+id/evr_vorname_head"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeadline"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                android:text="@string/vorname"
                />
            <TextView android:id="@+id/evr_uservorname"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeadline"
                android:layout_toRightOf="@id/evr_vorname_head"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/evr_username_head"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeadline"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                android:text="@string/nachname"
                />
            <TextView android:id="@+id/evr_nachname"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeadline"
                android:layout_toRightOf="@id/evr_username_head"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow>
            <Button
                android:text="Register"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHeadline"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:layout_weight="1"
                android:layout_span="2"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>
